# datastore-statistics

./: .gitignore  .pre-commit-config.yaml  README.md  datastore_statistics.py  ds.py  pyproject.toml  reader.py  requirements.txt  utils.py
datastore_statistics/: __init__.py  cli.py  readers.py  report.py  sidecar.py  stats.py  utils.py
tests/: __init__.py  conftest.py  test.py
tests/data/: ADNI_003_S_4354_MR_Axial_T2_STAR__br_raw_20170623130139365_21_S574600_I863646.dcm  ADNI_016_S_6802_MR_Axial_rsfMRI__Eyes_Open__br_raw_20191202235626831_388_S901123_I1261607.dcm  ADNI_016_S_6834_MR_Axial_rsfMRI__Eyes_Open__br_raw_20191115075041602_4939_S897431_I1256804.dcm  ADNI_016_S_6834_MR_Axial_rsfMRI__Eyes_Open__br_raw_20191115075041912_4270_S897431_I1256804.dcm  ADNI_016_S_6834_MR_Axial_rsfMRI__Eyes_Open__br_raw_20191115075506079_1988_S897431_I1256804.dcm  ADNI_016_S_6834_MR_Axial_rsfMRI__Eyes_Open__br_raw_20191115075624126_3200_S897431_I1256804.dcm  ADNI_019_S_4293_MR_Axial_2D_PASL_straight_no_ASL__br_raw_20180618154739217_802_S696759_I1011350.dcm  ADNI_019_S_4293_MR_Axial_2D_PASL_straight_no_ASL__br_raw_20180618154855516_760_S696759_I1011350.dcm  ADNI_019_S_4293_MR_Axial_2D_PASL_straight_no_ASL__br_raw_20180618155002147_265_S696759_I1011350.dcm  ADNI_019_S_4367_MR_Axial_DTI_straight_br_raw_20190523093056162_4676_S826089_I1167911.dcm
tests/integration/: test_cli.py
tests/unit/: test_readers.py  test_stats.py  test_utils.py
